--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <aspectj.version>1.8.10</aspectj.version>
+        <aspectj.version>1.9.7</aspectj.version>
         <allure.version>2.20.0</allure.version>
     </properties>
 
@@ -66,6 +66,13 @@
             <groupId>com.thegoate</groupId>
             <artifactId>restassured</artifactId>
             <version>0.15.17.202212161524</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.9.7</version>
+            <scope>runtime</scope>
         </dependency>
     </dependencies>
     <build>
